Fix padding on mobile navigation

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -73,7 +73,6 @@ nav {
   text-transform: uppercase;
   font-weight: 600;
   border: 0;
-  cursor: pointer;
   color: #fff;
   padding: .7em 0;
   background: transparent;
@@ -648,11 +647,6 @@ p#notice {
     background: transparent;
     border: 2px solid transparent;
     text-decoration: none;
-  }
-  
-  .nav-items li.sign-in a:hover {
-    border-bottom: 2px solid #0045fe;
-    padding-bottom: 1px; 
   }
   
   .nav-items li.sign-in {
